implement movement and add a pac man image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </div>
 <br>
-<button type="button" onclick="test()">Click Me!</button>
+<button type="button" onclick="drawBoard()">Click Me!</button>
 
 <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
 
