--- a/index.html
+++ b/index.html
@@ -1,121 +1,19 @@
 <html lang="en">            <!-- Declare the content language. -->
 <head>
     <meta charset="utf-8">  <!-- Declare the document's character set. -->
-    <title>Grid Game</title>   <!-- Set the page title.  Will be displayed at the top of the browser window and in bookmarks.  -->
+    <title>Pac Man Fever</title>   <!-- Set the page title.  Will be displayed at the top of the browser window and in bookmarks.  -->
     <link rel="stylesheet" href="index.css">    <!-- Include styles from index.css. -->
 </head>
 <body>
-
-<div id="board">
-
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-
-</div>
-<br>
-<button type="button" onclick="test()">Click Me!</button>
-
+  <main>
+    <section id= "scoreboard">
+      SCORE: <scan id="scoreVariable"></scan> &nbsp &nbsp LIVES: <scan id="livesVariable"></scan>&nbsp &nbsp LEVEL: <scan id="levelVariable"></scan>&nbsp &nbsp BOMBS: <scan id="bombsVariable"></scan>
+    </section>
+    <br>
+        <div id="board"></div>
+    <br>
+        <!-- <button type="button" onclick="test()">Click Me!</button> -->
+  </main>
 <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
 
 </body>
