--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div id="board"></div>
     <br>
         <!-- <button type="button" onclick="test()">Click Me!</button> -->
+    <scan id="GameOverMessage"></scan>
+    
   </main>
 <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
 
