--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
   <main>
     <section id= "scoreboard">
-      SCORE: <scan id="scoreVariable"></scan> &nbsp &nbsp LIVES: <scan id="livesVariable"></scan>&nbsp &nbsp LEVEL: <scan id="levelVariable"></scan>&nbsp &nbsp BOMBS: <scan id="bombsVariable"></scan>
+      SCORE: <scan id="scoreVariable"></scan> &nbsp &nbsp LIVES: <scan id="livesVariable"></scan>&nbsp &nbsp LEVEL: <scan id="levelVariable"></scan>&nbsp &nbsp BOMBS: <scan id="bombsVariable"></scan>&nbsp &nbsp &nbsp &nbsp Ghosts: &nbspReg - <scan id="regGhostCount"></scan>&nbsp  Rabid - <scan id="rabidGhostCount"></scan>&nbsp  Poison - <scan id="poisonGhostCount"></scan>
     </section>
     <br>
         <div id="board"></div>
     <br>
         <!-- <button type="button" onclick="test()">Click Me!</button> -->
     <scan id="GameOverMessage"></scan>
-    
+
   </main>
 <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
 
