--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <body>
   <main>
     <section id= "scoreboard">
-      SCORE: <scan id="scoreVariable"></scan> &nbsp &nbsp LIVES: <scan id="livesVariable"></scan>&nbsp &nbsp LEVEL: <scan id="levelVariable"></scan>&nbsp &nbsp BOMBS: <scan id="bombsVariable"></scan>&nbsp &nbsp &nbsp &nbsp Ghosts: &nbspReg - <scan id="regGhostCount"></scan>&nbsp  Rabid - <scan id="rabidGhostCount"></scan>&nbsp  Poison - <scan id="poisonGhostCount"></scan>
+      <span id="startButtonSpan"><button type="button" onclick="startGame()">Start</button></span>
+      SCORE: <span id="scoreVariable"></span> &nbsp &nbsp LIVES: <span id="livesVariable"></span>&nbsp &nbsp LEVEL: <span id="levelVariable"></span>&nbsp &nbsp BOMBS: <span id="bombsVariable"></span>&nbsp &nbsp &nbsp &nbsp Ghosts: &nbspReg - <span id="regGhostCount"></span>&nbsp  Rabid - <span id="rabidGhostCount"></span>&nbsp  Poison - <span id="poisonGhostCount"></span>
     </section>
     <br>
         <div id="board"></div>
     <br>
-        <!-- <button type="button" onclick="test()">Click Me!</button> -->
-    <scan id="GameOverMessage"></scan>
+
+    <span id="GameOverMessage"></span>
 
   </main>
 <script src="index.js"></script>    <!-- Include index.js as a JavaScript script file. -->
