--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <main>
     <section id= "scoreboard">
       <span id="startButtonSpan"><button type="button" onclick="startGame()">Start</button></span>
-      SCORE: <span id="scoreVariable"></span> &nbsp &nbsp LIVES: <span id="livesVariable"></span>&nbsp &nbsp LEVEL: <span id="levelVariable"></span>&nbsp &nbsp BOMBS: <span id="bombsVariable"></span>&nbsp &nbsp &nbsp &nbsp Ghosts: &nbspReg - <span id="regGhostCount"></span>&nbsp  Rabid - <span id="rabidGhostCount"></span>&nbsp  Poison - <span id="poisonGhostCount"></span>&nbsp  Builder - <span id="wallBuilderGhostCount"></span>
+      SCORE: <span id="scoreVariable"></span> &nbsp &nbsp LIVES: <span id="livesVariable"></span>&nbsp &nbsp LEVEL: <span id="levelVariable"></span>&nbsp &nbsp BOMBS: <span id="bombsVariable"></span>&nbsp &nbsp &nbsp Ghosts: &nbspReg - <span id="regGhostCount"></span>&nbsp  Rabid - <span id="rabidGhostCount"></span>&nbsp  Poison - <span id="poisonGhostCount"></span>&nbsp  Builder - <span id="wallBuilderGhostCount"></span>&nbsp  Ave Speed - <span id="aveGhostSpeed"></span>&nbsp&nbsp&nbsp  Timer - <span id="timer"></span>
     </section>
     <br>
         <div id="board"></div>
