--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
   <main>
     <section id= "scoreboard">
-      <span id="startButtonSpan"><button type="button" onclick="startGame()">Start</button></span>
+      <span id="startButtonSpan"><button type="button" onclick="startGame()">Start</button></span>&nbsp
+      <span id="noMusicButtonSpan"><button type="button" onclick="musicOff()">No Music</button></span>&nbsp
       SCORE: <span id="scoreVariable"></span> &nbsp &nbsp LIVES: <span id="livesVariable"></span>&nbsp &nbsp LEVEL: <span id="levelVariable"></span>&nbsp &nbsp BOMBS: <span id="bombsVariable"></span>&nbsp &nbsp &nbsp Ghosts: &nbspReg - <span id="regGhostCount"></span>&nbsp  Rabid - <span id="rabidGhostCount"></span>&nbsp  Poison - <span id="poisonGhostCount"></span>&nbsp  Builder - <span id="wallBuilderGhostCount"></span>&nbsp  Ave Speed - <span id="aveGhostSpeed"></span>&nbsp&nbsp&nbsp  Timer - <span id="timer"></span>
     </section>
     <br>
